# ml-laby

./: .gitignore  best_model.pth  list1.ipynb  list2.ipynb  list3.ipynb  list4.ipynb  list5.ipynb  list6.ipynb  list7.ipynb  list8.ipynb  pyproject.toml
data/: heart_processed.csv
