[project]
name = "ml-laby"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.0.1",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "kaggle>=1.7.4.5",
    "kagglehub>=0.3.13",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "xgboost>=3.1.1",
]
